<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:layout_weight="1"
    android:padding="5dp"
    android:background="@drawable/background1"
    tools:context=".MenuActivity">

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_singlePlayer"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="wrap_content"
        fancy:fb_textSize="@dimen/size_menu_button"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:fb_textFont="fonts/borque.ttf"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#7ab800"
        fancy:fb_focusColor="#d8232f"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/single_player"
        fancy:fb_textColor="#FFFFFF"
        android:onClick="startGame_SinglePlayer"/>
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_online"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="wrap_content"
        fancy:fb_textSize="@dimen/size_menu_button"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:fb_textFont="fonts/borque.ttf"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#7ab800"
        fancy:fb_focusColor="#d8232f"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/online"
        fancy:fb_textColor="#FFFFFF"
        android:onClick="StartGameMultiplayer"/>
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_onlineGame"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="wrap_content"
        fancy:fb_textSize="@dimen/size_menu_button"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:fb_textFont="fonts/borque.ttf"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#7ab800"
        fancy:fb_focusColor="#d8232f"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/onlineGame"
        fancy:fb_textColor="#FFFFFF"
        android:onClick="StartOnlineGame"/>
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_about"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="wrap_content"
        fancy:fb_textSize="@dimen/size_menu_button"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:fb_textFont="fonts/borque.ttf"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#7ab800"
        fancy:fb_focusColor="#d8232f"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/about"
        fancy:fb_textColor="#FFFFFF"
        android:onClick="ShowAboutNote"/>
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_exit"
        android:layout_width="@dimen/width_menu_button"
        android:layout_height="wrap_content"
        fancy:fb_textSize="@dimen/size_menu_button"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:fb_textFont="fonts/borque.ttf"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#7ab800"
        fancy:fb_focusColor="#d8232f"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/exit"
        fancy:fb_textColor="#FFFFFF"
        android:onClick="EndGame"/>

</LinearLayout>